--- a/package.json
+++ b/package.json
@@ -20,5 +20,24 @@
   "bugs": {
     "url": "https://github.com/w-pacheco/Inspire-lite/issues"
   },
-  "homepage": "https://github.com/w-pacheco/Inspire-lite#readme"
+  "homepage": "https://github.com/w-pacheco/Inspire-lite#readme",
+  "dependencies": {
+    "chokidar": "^3.5.2",
+    "colors": "^1.4.0",
+    "concurrently": "^6.2.1",
+    "connect": "^3.7.0",
+    "cors": "^2.8.5",
+    "event-stream": "^4.0.1",
+    "faye-websocket": "^0.11.4",
+    "fs-extra": "^10.0.0",
+    "http-auth": "^4.1.9",
+    "json-server": "^0.16.3",
+    "morgan": "^1.10.0",
+    "npm-watch": "^0.11.0",
+    "object-assign": "^4.1.1",
+    "open": "^8.4.0",
+    "proxy-middleware": "^0.15.0",
+    "send": "^0.17.2",
+    "serve-index": "^1.9.1"
+  }
 }
